# Yume-MBA-homework

./: README.md  biz.md  entropy.md  pyproject.toml
yume_doc/: Individual Assignment Questions.docx  logic_doc.md  数据定义.md
yumi-env/: pyvenv.cfg
yumi/src/: allElectronicInformationGainOri.dot  decision_tree.py  draw.py  logic.py  main.py
